--- a/patterns/brand/3-typefaces.html
+++ b/patterns/brand/3-typefaces.html
@@ -16,11 +16,11 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet">
   <style>
     :root {
-        --font-patternbot-primary: "Alegreya Sans", "Trebuchet MS", Arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        --font-patternbot-primary: "Alegreya Sans", "Trebuchet MS", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     }
 
       html {
-        font-family: "Alegreya Sans", "Trebuchet MS", Arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        font-family: "Alegreya Sans", "Trebuchet MS", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
       }
   </style>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
