Updating button colors

--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -16,14 +16,14 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet">
   <style>
     :root {
-        --font-patternbot-primary: "Alegreya Sans", "Trebuchet MS", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        --font-patternbot-primary: "Roboto", "Lato", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     }
 
       html {
-        font-family: "Alegreya Sans", "Trebuchet MS", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        font-family: "Roboto", "Lato", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
       }
   </style>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
 </head>
 <body>
 
@@ -39,7 +39,11 @@
   <div class="patternbot-font-primary text-left">
 
     <section>
-      <h2 class="patternbot-color-body giga ">Primary colours</h2>
+      <h2 class="patternbot-color-body giga push-1-4">Primary colours</h2>
+        <div class="patternbot-max-length italic max-length">
+          <p>The primary colours are amazing and represent amazingness. Use them for headers, footers and emphasis.</p>
+
+        </div>
 
       <div class="patternbot-color-swatches patternbot-color-swatches-primary grid grid-stretch">
         <div class="unit xs-1-2" style="background-color:var(--color-primary, var(--color-primary))">&nbsp;</div>
@@ -64,8 +68,8 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#daa520</code></li>
-              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(218, 165, 32, 1)</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#cc9ab6</code></li>
+              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(204, 154, 182, 1)</code></li>
             </ul>
           </li>
           <li class="push">
@@ -82,8 +86,8 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#ffd700</code></li>
-              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(255, 215, 0, 1)</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#e5e5e5</code></li>
+              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(229, 229, 229, 1)</code></li>
             </ul>
           </li>
       </ul>
@@ -92,7 +96,11 @@
     <section>
       <hr class="patternbot-hr">
 
-      <h2 class="patternbot-color-body giga ">Secondary colours</h2>
+      <h2 class="patternbot-color-body giga push-1-4">Secondary colours</h2>
+        <div class="patternbot-max-length italic max-length">
+          <p>The secondary colours represent things and stuff. Use them for links or when you an extra pop.</p>
+
+        </div>
 
       <div class="patternbot-color-swatches patternbot-color-swatches-secondary grid grid-stretch">
         <div class="unit xs-1-2" style="background-color:var(--color-secondary, var(--color-secondary))">&nbsp;</div>
@@ -116,8 +124,8 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#f08080</code></li>
-              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(240, 128, 128, 1)</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#333</code></li>
+              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(51, 51, 51, 1)</code></li>
             </ul>
           </li>
       </ul>
@@ -128,25 +136,6 @@
 
       <h2 class="patternbot-color-body giga ">Accent colours</h2>
       <ul class="patternbot-color-swatch-labels patternbot-color-body patternbot-list-group list-group-inline milli push-0">
-          <li class="push">
-            <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-accent);">&nbsp;</div>
-            <div class="push-1-2">
-              <i class="patternbot-color-swatches icon i-24" style="background-color:var(--color-accent);">&nbsp;</i>
-              <span class="icon-label">Accent</span>
-            </div>
-            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
-              <li class="push-1-8 relative">
-                <code>var(--color-accent)</code>
-                <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy color: --color-accent" aria-label="Copy color: --color-accent" data-clipboard-text="var(--color-accent)" hidden>
-                  <i class="icon i-18">
-                    <svg><use xlink:href="#icon-copy"></use></svg>
-                  </i>
-                </button>
-              </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#adff2f</code></li>
-              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(173, 255, 47, 1)</code></li>
-            </ul>
-          </li>
           <li class="push">
             <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-whatever);">&nbsp;</div>
             <div class="push-1-2">
@@ -162,39 +151,13 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#ffdab9</code></li>
-              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(255, 218, 185, 1)</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#cc9ab6</code></li>
+              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(204, 154, 182, 1)</code></li>
             </ul>
           </li>
       </ul>
     </section>
 
-    <section class="pad-t">
-      <hr class="patternbot-hr">
-
-      <h2 class="patternbot-color-body giga ">Neutral colours</h2>
-      <ul class="patternbot-color-swatch-labels patternbot-color-body patternbot-list-group list-group-inline milli push-0">
-          <li class="push">
-            <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-neutral-beige);">&nbsp;</div>
-            <div class="push-1-2">
-              <i class="patternbot-color-swatches icon i-24" style="background-color:var(--color-neutral-beige);">&nbsp;</i>
-              <span class="icon-label">Neutral beige</span>
-            </div>
-            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
-              <li class="push-1-8 relative">
-                <code>var(--color-neutral-beige)</code>
-                <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy color: --color-neutral-beige" aria-label="Copy color: --color-neutral-beige" data-clipboard-text="var(--color-neutral-beige)" hidden>
-                  <i class="icon i-18">
-                    <svg><use xlink:href="#icon-copy"></use></svg>
-                  </i>
-                </button>
-              </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#e2e2e2</code></li>
-              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(226, 226, 226, 1)</code></li>
-            </ul>
-          </li>
-      </ul>
-    </section>
 
 </div>
 
