--- a/patterns/brand/1-logos.html
+++ b/patterns/brand/1-logos.html
@@ -16,14 +16,14 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet">
   <style>
     :root {
-        --font-patternbot-primary: "Alegreya Sans", "Trebuchet MS", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        --font-patternbot-primary: "Roboto", "Lato", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     }
 
       html {
-        font-family: "Alegreya Sans", "Trebuchet MS", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        font-family: "Roboto", "Lato", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
       }
   </style>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
 </head>
 <body>
 
@@ -39,16 +39,18 @@
   <section class="text-left">
   <div class="grid">
     <div class="unit [ xs-1 m-1-2 ]">
-      <h1 class="patternbot-color-body patternbot-color-user-or-body yotta text-left" style="color: var(--color-primary)">
-          Pattern Library
+      <h1 class="patternbot-color-body patternbot-color-user-or-body yotta text-left" style="color: var(--color-primary); font-family: &quot;Roboto Condensed&quot;, monospace;">
+          Mugs
+          <span class="patternbot-sub-heading block giga">Pattern Library</span>
       </h1>
       <div class="patternbot-brand-desc peta">
-          <p>This pattern library is the source for all the colours, fonts &amp; styles available for our website.</p>
+          <p>This is the company introduction–we&#39;re so amazing and our brand signifies awesomeness!</p>
+
       </div>
     </div>
     <div class="unit [ xs-1 m-1-2 ] text-center gutter">
         <i class="icon i-192 block center-block push-1-2">
-          <img class="img-flex" src="../../images/logo-64.svg" alt="">
+          <img class="img-flex" src="../../images/logo-256.svg" alt="">
         </i>
         <i class="icon i-64 push-r-1-4">
           <img class="img-flex" src="../../images/logo-64.svg" alt="">
