--- a/patterns/typography/01-vertical-spacing.html
+++ b/patterns/typography/01-vertical-spacing.html
@@ -17,14 +17,14 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet">
   <style>
     :root {
-        --font-patternbot-primary: "Alegreya Sans", "Trebuchet MS", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        --font-patternbot-primary: "Roboto", "Lato", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     }
 
       html {
-        font-family: "Alegreya Sans", "Trebuchet MS", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        font-family: "Roboto", "Lato", arial, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
       }
   </style>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
 </head>
 <body>
 
@@ -49,35 +49,35 @@
 <div class="grid text-center patternbot-font-primary patternbot-color-body patternbot-spacing-display">
   <div class="unit [ xs-1-5 ]">
     <h2 class="push-0">2</h2>
-    <ul class="patternbot-code-details patternbot-code-details-under patternbot-code-details-center list-group-inline micro push-0">
+    <ul class="patternbot-code-details patternbot-code-details-under patternbot-code-details-center list-group-inline micro push-0 patternbot-vertical-spacing-classes">
       <li><code>.push-2</code></li>
       <li><code>.pad-2</code></li>
     </ul>
   </div>
   <div class="unit [ xs-1-5 ]">
     <h2 class="push-0">1</h2>
-    <ul class="patternbot-code-details patternbot-code-details-under patternbot-code-details-center list-group-inline micro push-0">
+    <ul class="patternbot-code-details patternbot-code-details-under patternbot-code-details-center list-group-inline micro push-0 patternbot-vertical-spacing-classes">
       <li><code>.push</code></li>
       <li><code>.pad</code></li>
     </ul>
   </div>
   <div class="unit [ xs-1-5 ]">
     <h2 class="push-0">½</h2>
-    <ul class="patternbot-code-details patternbot-code-details-under patternbot-code-details-center list-group-inline micro push-0">
+    <ul class="patternbot-code-details patternbot-code-details-under patternbot-code-details-center list-group-inline micro push-0 patternbot-vertical-spacing-classes">
       <li><code>.push-1-2</code></li>
       <li><code>.pad-1-2</code></li>
     </ul>
   </div>
   <div class="unit [ xs-1-5 ]">
     <h2 class="push-0">¼</h2>
-    <ul class="patternbot-code-details patternbot-code-details-under patternbot-code-details-center list-group-inline micro push-0">
+    <ul class="patternbot-code-details patternbot-code-details-under patternbot-code-details-center list-group-inline micro push-0 patternbot-vertical-spacing-classes">
       <li><code>.push-1-4</code></li>
       <li><code>.pad-1-4</code></li>
     </ul>
   </div>
   <div class="unit [ xs-1-5 ]">
     <h2 class="push-0">⅛</h2>
-    <ul class="patternbot-code-details patternbot-code-details-under patternbot-code-details-center list-group-inline micro push-0">
+    <ul class="patternbot-code-details patternbot-code-details-under patternbot-code-details-center list-group-inline micro push-0 patternbot-vertical-spacing-classes">
       <li><code>.push-1-8</code></li>
       <li><code>.pad-1-8</code></li>
     </ul>
