Add week 8 requirements
nav
sections

--- a/patterns/brand/1-logos.html
+++ b/patterns/brand/1-logos.html
@@ -39,12 +39,12 @@
   <section class="text-left">
   <div class="grid">
     <div class="unit [ xs-1 m-1-2 ]">
-      <h1 class="patternbot-color-body patternbot-color-user-or-body yotta text-left" style="color: var(--color-primary); font-family: &quot;Roboto Condensed&quot;, monospace;">
+      <h1 class="patternbot-color-body patternbot-color-user-or-body yotta text-left" style="color: var(--color-primary); font-family: ;">
           Mugs
           <span class="patternbot-sub-heading block giga">Pattern Library</span>
       </h1>
       <div class="patternbot-brand-desc peta">
-          <p>This is the company introduction–we&#39;re so amazing and our brand signifies awesomeness!</p>
+          <p>MUGS is an online store that specializes in mugs. They carry many designs, such as funny, sweet and artistic.</p>
 
       </div>
     </div>
