--- a/patterns/cards/icon-card.html
+++ b/patterns/cards/icon-card.html
@@ -9,13 +9,13 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
-  <link href="button.css" rel="stylesheet">
+  <link href="cards.css" rel="stylesheet">
 </head>
 <body>
 
-  <div class="card island-1-2 text-center">
-    <i class="icon i-128 push-1-2">
-      <svg><use xlink:href="../../images/icons.svg#velociraptor"/></svg>
+  <div class="card icon-card island-1-2 text-center">
+    <i class="icon i-192">
+      <svg><use xlink:href="../../images/icons.svg#cart-full"/></svg>
     </i>
     <h2 class="push-1-4">This is a card</h2>
     <p class="push-0">lorem ipsum dolor sit amet, consectetuer adipscing elit.</p>
