--- a/patterns/cards/basic-card.html
+++ b/patterns/cards/basic-card.html
@@ -9,13 +9,13 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
-  <link href="button.css" rel="stylesheet">
+  <link href="cards.css" rel="stylesheet">
 </head>
 <body>
 
-  <div class="card island-1-2">
+  <div class="card basic-card island text-center">
     <h2 class="push-1-4">This is a card</h2>
-    <p class="push-0">lorem ipsum dolor sit amet, consectetuer adipscing elit.</p>
+    <p class="push-0">Lorem ipsum dolor sit, consectetur adipiscing elit. Nulla sit amet urna fermentum, sodales velit in, consequat velit. In ultrices tortor et enim bibendum, a malesuada enim feugiat. Pellentesque tempus sed diam id venenatis. Praesent ornare hendrerit orci, eget egestas mi congue ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque vulputate dui magna, ac lobortis nisl tempor.</p>
   </div>
 
 </body>
