--- a/patterns/forms/fieldset.html
+++ b/patterns/forms/fieldset.html
@@ -9,13 +9,15 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
-  <link href="buttons.css" rel="stylesheet">
+  <link href="forms.css" rel="stylesheet">
 </head>
 <body>
 
-<a class="btn" href="#">Standard button</a>
-<a class="btn btn-light" href="#">Light button</a>
-<a class="btn btn-ghost" href="#">Ghost button</a>
+  <form>
+    <fieldset>
+      <legend>Personal Information</legend>
+    </fieldset>
+  </form>
 
 </body>
 </html>
