--- a/patterns/forms/required.html
+++ b/patterns/forms/required.html
@@ -9,13 +9,18 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
-  <link href="buttons.css" rel="stylesheet">
+  <link href="forms.css" rel="stylesheet">
 </head>
 <body>
 
-<a class="btn" href="#">Standard button</a>
-<a class="btn btn-light" href="#">Light button</a>
-<a class="btn btn-ghost" href="#">Ghost button</a>
+  <form>
+    <div class="grid">
+      <div class="unit xs-1 s-1 m-1-2 pad-b gutter-1-2">
+        <label for="email" class="kilo">Email Address<span class="opt italic"> (required)</span></label>
+        <input id="email" type="email" required aria-describedby="email-error">
+      </div>
+    </div>
+  </form>
 
 </body>
 </html>
