--- a/patterns/forms/textbox.html
+++ b/patterns/forms/textbox.html
@@ -9,13 +9,18 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
-  <link href="buttons.css" rel="stylesheet">
+  <link href="forms.css" rel="stylesheet">
 </head>
 <body>
 
-<a class="btn" href="#">Standard button</a>
-<a class="btn btn-light" href="#">Light button</a>
-<a class="btn btn-ghost" href="#">Ghost button</a>
+<form>
+    <div class="grid">
+      <div class="unit xs-1 s-1 m-1-2 pad-t-1-8 gutter-1-2 pad-b">
+        <label for="name" class="kilo">First Name</label>
+        <input id="name" name="name">
+      </div>
+    </div>
+</form>
 
 </body>
 </html>
