--- a/patterns/banner/banner.html
+++ b/patterns/banner/banner.html
@@ -2,25 +2,25 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Optional form</title>
+  <title>Banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
-  <link href="forms.css" rel="stylesheet">
+  <link href="banner.css" rel="stylesheet">
 </head>
 <body>
 
-  <form>
-    <div class="grid">
-      <div class="unit xs-1 s-1 m-1-2 gutter">
-        <label for="tel" class="kilo">Phone number<span class="opt italic"> (optional)</span></label>
-        <input id="tel" type="tel">
-      </div>
+  <div class="banner-home">
+    <div class="embed embed-16by9">
+      <img class="img-flex embed-item" src="../../images/banner.jpg" alt="…">
     </div>
-  </form>
+    <div class="banner-content">
+      <p class="push-0 bold yotta text-center">Find your perfect Mug<br>New arrivals weekly</p>
+    </div>
+  </div>
 
 </body>
 </html>
