--- a/patterns/buttons/light-btn.html
+++ b/patterns/buttons/light-btn.html
@@ -2,25 +2,18 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Optional form</title>
+  <title>Buttons</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
-  <link href="forms.css" rel="stylesheet">
+  <link href="buttons.css" rel="stylesheet">
 </head>
 <body>
 
-  <form>
-    <div class="grid">
-      <div class="unit xs-1 s-1 m-1-2 gutter">
-        <label for="tel" class="kilo">Phone number<span class="opt italic"> (optional)</span></label>
-        <input id="tel" type="tel">
-      </div>
-    </div>
-  </form>
+  <a class="btn btn-light" href="#">Light button</a>
 
 </body>
 </html>
