--- a/patterns/cards/icon-card.html
+++ b/patterns/cards/icon-card.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 
-  <div class="card icon-card island-1-2 text-center">
-    <i class="icon i-192">
+  <div class="card icon-card island text-center relative">
+    <i class="icon i-96">
       <svg><use xlink:href="../../images/icons.svg#cart-full"/></svg>
     </i>
     <h2 class="push-1-4">This is a card</h2>
