--- a/patterns/forms/dropdown.html
+++ b/patterns/forms/dropdown.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Buttons</title>
+  <title>Drop Down</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -14,8 +14,8 @@
 <body>
 
   <form>
-    <div class="grid">
-      <div class="unit xs-1 s-1 m-1-2 pad-b gutter-1-2">
+    <div>
+      <div class="pad-b gutter">
         <label for="prov" class="kilo ">Province</label>
         <select id="prov" name="prov">
           <option>Select a province</option>
