--- a/patterns/forms/fieldset.html
+++ b/patterns/forms/fieldset.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Buttons</title>
+  <title>Fieldset</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
 
   <form>
-    <fieldset>
+    <fieldset class="gutter">
       <legend>Personal Information</legend>
     </fieldset>
   </form>
