--- a/patterns/sections/text-sections.html
+++ b/patterns/sections/text-sections.html
@@ -16,19 +16,26 @@
   <section class="text-center pad-t pad-b-2" id="buttons">
     <ul class="list-group-inline text-center">
       <li class="island-1-2">
-        <a href="#" class="btn gutter tera">
+        <a href="#" class="btn gutter">
           <h2>Shop</h2>
-          <p>lorem ipsum dolor sit amet, consectetuer adipscing elit</p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipscing elit.</p>
         </a>
       </li>
       <li class="island-1-2">
-        <a href="#" class="btn gutter tera">About</a>
+        <a href="#" class="btn gutter">
+          <h2>About</h2>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipscing elit.</p>
+        </a>
       </li>
       <li class="island-1-2">
-        <a href="#" class="btn gutter tera">Sale</a>
-
+        <a href="#" class="btn gutter">
+          <h2>Sale</h2>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipscing elit.</p>
+        </a>
       </li>
+    </ul>
 
-    </section>
+  </section>
+
 </body>
 </html>
