--- a/patterns/banner/social-banner.html
+++ b/patterns/banner/social-banner.html
@@ -2,20 +2,29 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Buttons</title>
+  <title>Icon Card</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
-  <link href="buttons.css" rel="stylesheet">
+  <link href="cards.css" rel="stylesheet">
 </head>
 <body>
 
-<a class="btn" href="#">Standard button</a>
-<a class="btn btn-light" href="#">Light button</a>
-<a class="btn btn-ghost" href="#">Ghost button</a>
+  <div class="text-center pad-b">
+    <h1>Follow Us On Social Media!</h1>
+    <i class="icon i-128">
+      <svg><use xlink:href="../../images/icons.svg#facebook"/></svg>
+    </i>
+    <i class="icon i-128">
+      <svg><use xlink:href="../../images/icons.svg#instagram"/></svg>
+    </i>
+    <i class="icon i-128">
+      <svg><use xlink:href="../../images/icons.svg#twitter"/></svg>
+    </i>
+  </div>
 
 </body>
 </html>
