--- a/patterns/footer/footer.html
+++ b/patterns/footer/footer.html
@@ -2,25 +2,20 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Optional form</title>
+  <title>Footer</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
-  <link href="forms.css" rel="stylesheet">
+  <link href="footer.css" rel="stylesheet">
 </head>
 <body>
 
-  <form>
-    <div class="grid">
-      <div class="unit xs-1 s-1 m-1-2 gutter">
-        <label for="tel" class="kilo">Phone number<span class="opt italic"> (optional)</span></label>
-        <input id="tel" type="tel">
-      </div>
-    </div>
-  </form>
+  <footer class="footer island micro" role="contentinfo">
+    <p class="push-0">© 2018 MUGS<a class="link-neutral" href="#">MUGS</a></p>
+  </footer>
 
 </body>
 </html>
