--- a/patterns/forms/required.html
+++ b/patterns/forms/required.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Buttons</title>
+  <title>Required Form</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -14,10 +14,10 @@
 <body>
 
   <form>
-    <div class="grid">
-      <div class="unit xs-1 s-1 m-1-2 pad-b gutter-1-2">
+    <div>
+      <div class="pad-b gutter">
         <label for="email" class="kilo">Email Address<span class="opt italic"> (required)</span></label>
-        <input id="email" type="email" required aria-describedby="email-error">
+        <input id="email" type="email" required>
       </div>
     </div>
   </form>
