--- a/patterns/forms/textbox.html
+++ b/patterns/forms/textbox.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Buttons</title>
+  <title>Textbox Form</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -13,14 +13,14 @@
 </head>
 <body>
 
-<form>
+  <form>
     <div class="grid">
       <div class="unit xs-1 s-1 m-1-2 pad-t-1-8 gutter-1-2 pad-b">
         <label for="name" class="kilo">First Name</label>
         <input id="name" name="name">
       </div>
     </div>
-</form>
+  </form>
 
 </body>
 </html>
