--- a/patterns/icons/1-icons.html
+++ b/patterns/icons/1-icons.html
@@ -37,7 +37,46 @@
   </svg>
 
   <ul class="patternbot-icon-display patternbot-list-group list-group-inline ">
-    <li class="pad-b-1-2 push" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#about" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#about" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#about" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#about" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#about" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #about
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: about" aria-label="Copy icon: about" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#about&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -76,7 +115,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2 push" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -115,46 +154,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2 push" style="">
-      <div class="text-center">
-        <div class="patternbot-icon-display-left island-1-2">
-          <i class="icon i-128 block">
-            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
-          </i>
-        </div>
-        <div class="patternbot-icon-display-right center-contents island-1-2">
-          <i class="icon i-64 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
-          </i>
-          <i class="icon i-32 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
-          </i>
-          <i class="icon i-18 block">
-            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
-          </i>
-        </div>
-      </div>
-      <div class="text-center patternbot-color-body">
-        <i class="icon i-24 patternbot-color-body">
-          <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
-        </i>
-        <span class="icon-label ib">
-          <code class="micro" style="">
-            #instagram
-          </code>
-        </span>
-        <span class="icon-label ib">
-          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: instagram" aria-label="Copy icon: instagram" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#instagram&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
-            <i class="icon i-18 patternbot-color-body">
-              <svg>
-                <use xlink:href="#icon-copy"  style=""></use>
-              </svg>
-            </i>
-          </button>
-        </span>
-      </div>
-    </li>
-    <li class="pad-b-1-2 push" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -193,36 +193,36 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2 push" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
-            <svg><use xlink:href="../../images/icons.svg#search" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
           </i>
         </div>
         <div class="patternbot-icon-display-right center-contents island-1-2">
           <i class="icon i-64 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#search" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
           </i>
           <i class="icon i-32 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#search" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
           </i>
           <i class="icon i-18 block">
-            <svg><use xlink:href="../../images/icons.svg#search" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
           </i>
         </div>
       </div>
       <div class="text-center patternbot-color-body">
         <i class="icon i-24 patternbot-color-body">
-          <svg><use xlink:href="../../images/icons.svg#search" /></svg>
+          <svg><use xlink:href="../../images/icons.svg#instagram" /></svg>
         </i>
         <span class="icon-label ib">
           <code class="micro" style="">
-            #search
+            #instagram
           </code>
         </span>
         <span class="icon-label ib">
-          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: search" aria-label="Copy icon: search" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#search&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: instagram" aria-label="Copy icon: instagram" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#instagram&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
               <svg>
                 <use xlink:href="#icon-copy"  style=""></use>
@@ -232,36 +232,36 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2 push" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
-            <svg><use xlink:href="../../images/icons.svg#toggle-open" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#shop" /></svg>
           </i>
         </div>
         <div class="patternbot-icon-display-right center-contents island-1-2">
           <i class="icon i-64 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#toggle-open" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#shop" /></svg>
           </i>
           <i class="icon i-32 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#toggle-open" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#shop" /></svg>
           </i>
           <i class="icon i-18 block">
-            <svg><use xlink:href="../../images/icons.svg#toggle-open" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#shop" /></svg>
           </i>
         </div>
       </div>
       <div class="text-center patternbot-color-body">
         <i class="icon i-24 patternbot-color-body">
-          <svg><use xlink:href="../../images/icons.svg#toggle-open" /></svg>
+          <svg><use xlink:href="../../images/icons.svg#shop" /></svg>
         </i>
         <span class="icon-label ib">
           <code class="micro" style="">
-            #toggle-open
+            #shop
           </code>
         </span>
         <span class="icon-label ib">
-          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: toggle-open" aria-label="Copy icon: toggle-open" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#toggle-open&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: shop" aria-label="Copy icon: shop" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#shop&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
               <svg>
                 <use xlink:href="#icon-copy"  style=""></use>
@@ -271,7 +271,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2 push" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -301,45 +301,6 @@
         </span>
         <span class="icon-label ib">
           <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: twitter" aria-label="Copy icon: twitter" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#twitter&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
-            <i class="icon i-18 patternbot-color-body">
-              <svg>
-                <use xlink:href="#icon-copy"  style=""></use>
-              </svg>
-            </i>
-          </button>
-        </span>
-      </div>
-    </li>
-    <li class="pad-b-1-2 push" style="">
-      <div class="text-center">
-        <div class="patternbot-icon-display-left island-1-2">
-          <i class="icon i-128 block">
-            <svg><use xlink:href="../../images/icons.svg#toggle-closed" /></svg>
-          </i>
-        </div>
-        <div class="patternbot-icon-display-right center-contents island-1-2">
-          <i class="icon i-64 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#toggle-closed" /></svg>
-          </i>
-          <i class="icon i-32 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#toggle-closed" /></svg>
-          </i>
-          <i class="icon i-18 block">
-            <svg><use xlink:href="../../images/icons.svg#toggle-closed" /></svg>
-          </i>
-        </div>
-      </div>
-      <div class="text-center patternbot-color-body">
-        <i class="icon i-24 patternbot-color-body">
-          <svg><use xlink:href="../../images/icons.svg#toggle-closed" /></svg>
-        </i>
-        <span class="icon-label ib">
-          <code class="micro" style="">
-            #toggle-closed
-          </code>
-        </span>
-        <span class="icon-label ib">
-          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: toggle-closed" aria-label="Copy icon: toggle-closed" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#toggle-closed&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
               <svg>
                 <use xlink:href="#icon-copy"  style=""></use>
