--- a/patterns/product-list/product-list.html
+++ b/patterns/product-list/product-list.html
@@ -2,25 +2,30 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Optional form</title>
+  <title>Product List</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,400i,700" rel="stylesheet">
-  <link href="forms.css" rel="stylesheet">
+  <link href="product-list.css" rel="stylesheet">
+  <link href="../buttons/buttons.css" rel="stylesheet">
 </head>
 <body>
 
-  <form>
-    <div class="grid">
-      <div class="unit xs-1 s-1 m-1-2 gutter">
-        <label for="tel" class="kilo">Phone number<span class="opt italic"> (optional)</span></label>
-        <input id="tel" type="tel">
+  <div class="pad-b">
+    <div class="push-0">
+      <div class="embed embed-1by1">
+        <img class="embed-item img-flex island" src="../../images/placeholder.png" alt="">
       </div>
+      <h1 class="text-center tera">Product Name</h1>
+      <h5 class="text-center">Price</h5>
+        <div class="island text-center">
+          <a class="btn tera" href="#" aria-label="Buy">Buy</a>
+        </div>
     </div>
-  </form>
+  </div>
 
 </body>
 </html>
