--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
               </button>
               <code><pre id="banner-banner-code-sample-copy-chunk">&lt;div class="banner-home"&gt;
   &lt;div class="embed embed-16by9">
-    &lt;img class="img-flex embed-item" src="../../images/banner.jpg" alt="&#x2026;">
+    &lt;img class="embed-item" src="../../images/banner.jpg" alt="&#x2026;">
   &lt;/div>
   &lt;div class="banner-content">
     &lt;p class="push-0 bold yotta text-center">Find your perfect Mug&lt;br>New arrivals weekly&lt;/p>
@@ -1876,19 +1876,19 @@
                 </i>
               </button>
               <code><pre id="header-header-code-sample-copy-chunk">&lt;header class="masthead" role="banner"&gt;
-  &lt;a class="logo block peta" href="#">
+  &lt;a class="logo block peta logo-position" href="#">
       &lt;i class="icon i-192">
         &lt;img src="../../images/logo-256.svg" alt="">
       &lt;/i>
     &lt;/a>
   &lt;nav class="nav pad-t-1-2 pad-b-1-2" role="navigation">
-    &lt;ul class="list-group-inline push-0">
+    &lt;ul class="mega list-group-inline push-0">
       &lt;li class="gutter-1-2">&lt;a href="#">Home&lt;/a>&lt;/li>
       &lt;li class="gutter-1-2">&lt;a href="#">Shop&lt;/a>&lt;/li>
       &lt;li class="gutter-1-2">&lt;a href="#">Sale&lt;/a>&lt;/li>
       &lt;li class="gutter-1-2">&lt;a href="#">About&lt;/a>&lt;/li>
       &lt;li>
-        &lt;i class="icon i-32">
+        &lt;i class="icon i-64 shop-icon">
             &lt;svg>&lt;use xlink:href="../../images/icons.svg#cart-empty"/>&lt;/svg>
           &lt;/i>
       &lt;/li>
