--- a/patterns/banner/banner.html
+++ b/patterns/banner/banner.html
@@ -15,7 +15,7 @@
 
   <div class="banner-home">
     <div class="embed embed-16by9">
-      <img class="img-flex embed-item" src="../../images/banner.jpg" alt="…">
+      <img class="embed-item" src="../../images/banner.jpg" alt="…">
     </div>
     <div class="banner-content">
       <p class="push-0 bold yotta text-center">Find your perfect Mug<br>New arrivals weekly</p>
