--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -14,19 +14,19 @@
 <body>
 
   <header class="masthead" role="banner">
-    <a class="logo block peta" href="#">
+    <a class="logo block peta logo-position" href="#">
       <i class="icon i-192">
         <img src="../../images/logo-256.svg" alt="">
       </i>
     </a>
     <nav class="nav pad-t-1-2 pad-b-1-2" role="navigation">
-      <ul class="list-group-inline push-0">
+      <ul class="mega list-group-inline push-0">
         <li class="gutter-1-2"><a href="#">Home</a></li>
         <li class="gutter-1-2"><a href="#">Shop</a></li>
         <li class="gutter-1-2"><a href="#">Sale</a></li>
         <li class="gutter-1-2"><a href="#">About</a></li>
         <li>
-          <i class="icon i-32">
+          <i class="icon i-64 shop-icon">
             <svg><use xlink:href="../../images/icons.svg#cart-empty"/></svg>
           </i>
         </li>
