Fixing the navigation

--- a/index.html
+++ b/index.html
@@ -898,11 +898,11 @@
                 </i>
               </button>
               <code><pre id="banner-banner-code-sample-copy-chunk">&lt;div class="banner-home"&gt;
-  &lt;div class="embed embed-16by9">
-    &lt;img class="embed-item" src="../../images/banner.jpg" alt="&#x2026;">
+  &lt;div class="embed embed-16by9 banner-home-div">
+    &lt;img class="img-flex embed-item" src="../../images/banner.jpg" alt="&#x2026;">
   &lt;/div>
   &lt;div class="banner-content">
-    &lt;p class="push-0 bold yotta text-center">Find your perfect Mug&lt;br>New arrivals weekly&lt;/p>
+    &lt;p class="push-0 bold yotta text-center">Find your perfect mug&lt;br>New arrivals weekly&lt;/p>
   &lt;/div>
 &lt;/div>
 </pre></code>
@@ -968,13 +968,13 @@
               <code><pre id="banner-social-banner-code-sample-copy-chunk">&lt;div class="text-center pad-b"&gt;
   &lt;h1>Follow Us On Social Media!&lt;/h1>
   &lt;i class="icon i-128">
-      &lt;svg>&lt;use xlink:href="../../images/icons.svg#facebook"/>&lt;/svg>
+      &lt;svg class="island-1-2">&lt;use xlink:href="../../images/icons.svg#facebook"/>&lt;/svg>
     &lt;/i>
   &lt;i class="icon i-128">
-      &lt;svg>&lt;use xlink:href="../../images/icons.svg#instagram"/>&lt;/svg>
+      &lt;svg class="island-1-2">&lt;use xlink:href="../../images/icons.svg#instagram"/>&lt;/svg>
     &lt;/i>
   &lt;i class="icon i-128">
-      &lt;svg>&lt;use xlink:href="../../images/icons.svg#twitter"/>&lt;/svg>
+      &lt;svg class="island-1-2">&lt;use xlink:href="../../images/icons.svg#twitter"/>&lt;/svg>
     &lt;/i>
 &lt;/div>
 </pre></code>
@@ -1876,24 +1876,26 @@
                 </i>
               </button>
               <code><pre id="header-header-code-sample-copy-chunk">&lt;header class="masthead" role="banner"&gt;
-  &lt;a class="logo block peta logo-position" href="#">
-      &lt;i class="icon i-192">
-        &lt;img src="../../images/logo-256.svg" alt="">
-      &lt;/i>
-    &lt;/a>
-  &lt;nav class="nav pad-t-1-2 pad-b-1-2" role="navigation">
-    &lt;ul class="mega list-group-inline push-0">
-      &lt;li class="gutter-1-2">&lt;a href="#">Home&lt;/a>&lt;/li>
-      &lt;li class="gutter-1-2">&lt;a href="#">Shop&lt;/a>&lt;/li>
-      &lt;li class="gutter-1-2">&lt;a href="#">Sale&lt;/a>&lt;/li>
-      &lt;li class="gutter-1-2">&lt;a href="#">About&lt;/a>&lt;/li>
-      &lt;li>
-        &lt;i class="icon i-64 shop-icon">
-            &lt;svg>&lt;use xlink:href="../../images/icons.svg#cart-empty"/>&lt;/svg>
+  &lt;div class="grid grid-bottom">
+    &lt;div class="unit xs-1 m-1-2">
+      &lt;a class="logo block peta logo-position" href="#">
+          &lt;i class="icon i-192">
+            &lt;img src="../../images/logo-256.svg" alt="">
           &lt;/i>
-      &lt;/li>
-    &lt;/ul>
-  &lt;/nav>
+        &lt;/a>
+    &lt;/div>
+    &lt;div class="unit xs-1 m-1-2 pad-b-2">
+      &lt;nav class="nav" role="navigation">
+        &lt;ul class="mega text-center list-group-inline push-0">
+          &lt;li class="gutter-1-2">&lt;a href="#">Home&lt;/a>&lt;/li>
+          &lt;li class="gutter-1-2">&lt;a href="#">Shop&lt;/a>&lt;/li>
+          &lt;li class="gutter-1-2">&lt;a href="#">Sale&lt;/a>&lt;/li>
+          &lt;li class="gutter-1-2">&lt;a href="#">About&lt;/a>&lt;/li>
+        &lt;/ul>
+      &lt;/nav>
+    &lt;/div>
+  &lt;/div>
+
 &lt;/header>
 </pre></code>
             </div>
