--- a/patterns/banner/social-banner.html
+++ b/patterns/banner/social-banner.html
@@ -16,13 +16,13 @@
   <div class="text-center pad-b">
     <h1>Follow Us On Social Media!</h1>
     <i class="icon i-128">
-      <svg><use xlink:href="../../images/icons.svg#facebook"/></svg>
+      <svg class="island-1-2"><use xlink:href="../../images/icons.svg#facebook"/></svg>
     </i>
     <i class="icon i-128">
-      <svg><use xlink:href="../../images/icons.svg#instagram"/></svg>
+      <svg class="island-1-2"><use xlink:href="../../images/icons.svg#instagram"/></svg>
     </i>
     <i class="icon i-128">
-      <svg><use xlink:href="../../images/icons.svg#twitter"/></svg>
+      <svg class="island-1-2"><use xlink:href="../../images/icons.svg#twitter"/></svg>
     </i>
   </div>
 
