--- a/pages/home.html
+++ b/pages/home.html
@@ -8,25 +8,23 @@
 </head>
 <body>
 
-  <header class="gutter">
-    <script type="application/json" data-pattern="header/header"></script>
-  </header>
+  <script class="gutter" type="application/json" data-pattern="header/header"></script>
 
   <banner>
     <script type="application/json" data-pattern="banner/banner"></script>
   </banner>
 
   <div class="grid island-2">
-    <div class="unit xs-1 m-1-3 gutter pad-t-2 pad-b-2">
+    <div class="unit xs-1 s-1 m-1-3 gutter pad-t-2 pad-b-2">
       <script type="application/json" data-pattern="cards/icon-card">
         {
           "use[xlink:href]": "../images/icons.svg#about",
           "h2": "About",
-          "p": "Learn more about us as a company and our genuine products."
+          "p": "Learn more about us as a company and our products."
         }
       </script>
     </div>
-    <div class="unit xs-1 m-1-3 gutter pad-t-2 pad-b-2">
+    <div class="unit xs-1 s-1 m-1-3 gutter pad-t-2 pad-b-2">
       <script type="application/json" data-pattern="cards/icon-card">
         {
           "use[xlink:href]": "../images/icons.svg#shop",
@@ -35,7 +33,7 @@
         }
       </script>
     </div>
-    <div class="unit xs-1 m-1-3 gutter pad-t-2 pad-b-2">
+    <div class="unit xs-1 s-1 m-1-3 gutter pad-t-2 pad-b-2">
       <script type="application/json" data-pattern="cards/icon-card">
       {
         "h2": "Cart",
