--- a/patterns/banner/banner.html
+++ b/patterns/banner/banner.html
@@ -14,11 +14,11 @@
 <body>
 
   <div class="banner-home">
-    <div class="embed embed-16by9">
-      <img class="embed-item" src="../../images/banner.jpg" alt="…">
+    <div class="embed embed-16by9 banner-home-div">
+      <img class="img-flex embed-item" src="../../images/banner.jpg" alt="…">
     </div>
     <div class="banner-content">
-      <p class="push-0 bold yotta text-center">Find your perfect Mug<br>New arrivals weekly</p>
+      <p class="push-0 bold yotta text-center">Find your perfect mug<br>New arrivals weekly</p>
     </div>
   </div>
 
