--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -14,24 +14,26 @@
 <body>
 
   <header class="masthead" role="banner">
-    <a class="logo block peta logo-position" href="#">
-      <i class="icon i-192">
-        <img src="../../images/logo-256.svg" alt="">
-      </i>
-    </a>
-    <nav class="nav pad-t-1-2 pad-b-1-2" role="navigation">
-      <ul class="mega list-group-inline push-0">
-        <li class="gutter-1-2"><a href="#">Home</a></li>
-        <li class="gutter-1-2"><a href="#">Shop</a></li>
-        <li class="gutter-1-2"><a href="#">Sale</a></li>
-        <li class="gutter-1-2"><a href="#">About</a></li>
-        <li>
-          <i class="icon i-64 shop-icon">
-            <svg><use xlink:href="../../images/icons.svg#cart-empty"/></svg>
+    <div class="grid grid-bottom">
+      <div class="unit xs-1 m-1-2">
+        <a class="logo block peta logo-position" href="#">
+          <i class="icon i-192">
+            <img src="../../images/logo-256.svg" alt="">
           </i>
-        </li>
-      </ul>
-    </nav>
+        </a>
+      </div>
+      <div class="unit xs-1 m-1-2 pad-b-2">
+        <nav class="nav" role="navigation">
+          <ul class="mega text-center list-group-inline push-0">
+            <li class="gutter-1-2"><a href="#">Home</a></li>
+            <li class="gutter-1-2"><a href="#">Shop</a></li>
+            <li class="gutter-1-2"><a href="#">Sale</a></li>
+            <li class="gutter-1-2"><a href="#">About</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+
   </header>
 
 </body>
