--- a/patterns/banner/banner.html
+++ b/patterns/banner/banner.html
@@ -17,7 +17,7 @@
     <div class="embed embed-16by9 banner-home-div">
       <img class="img-flex embed-item" src="../../images/banner.jpg" alt="…">
     </div>
-    <div class="banner-content">
+    <div class="banner-content pin-c">
       <p class="push-0 bold yotta text-center">Find your perfect mug<br>New arrivals weekly</p>
     </div>
   </div>
