--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -14,15 +14,15 @@
 <body>
 
   <header class="masthead" role="banner">
-    <div class="grid grid-bottom">
-      <div class="unit xs-1 m-1-2">
+    <div class="">
+      <div class="">
         <a class="logo block peta logo-position" href="#">
           <i class="icon i-192">
             <img src="../../images/logo-256.svg" alt="">
           </i>
         </a>
       </div>
-      <div class="unit xs-1 m-1-2 pad-b-2">
+      <div class="pad-b-2">
         <nav class="nav" role="navigation">
           <ul class="mega text-center list-group-inline push-0">
             <li class="gutter-1-2"><a href="#">Home</a></li>
