--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -69,7 +69,7 @@
         }
       </script>
     </div>
-    <div class="unit xs-1 s-1 m-1-2">
+    <div class="unit xs-1 s-1 m-1-2 gutter">
       <script type="application/json" data-pattern="forms/dropdown"></script>
     </div>
     <div class="unit xs-1">
