Finished the thing

--- a/patterns/forms/dropdown.html
+++ b/patterns/forms/dropdown.html
@@ -15,22 +15,20 @@
 
   <form>
     <div>
-      <div class="pad-b gutter">
-        <label for="prov" class="kilo ">Province</label>
+      <div class="pad-b">
+        <label for="prov" class="kilo prov">Province</label>
         <select id="prov" name="prov">
-          <option>Select a province</option>
-          <option>Alberta</option>
-          <option>British Columbia</option>
-          <option>Manitoba</option>
-          <option>New Brunswick</option>
-          <option>Newfoundland & Labrador</option>
-          <option>Nova Scotia</option>
-          <option>Nunavut</option>
-          <option>Ontario</option>
-          <option>Prince Edward Island</option>
-          <option>Québec</option>
-          <option>Saskatchewan</option>
-          <option>Yukon</option>
+          <option class="n1">Select a province</option>
+          <option class="n2">Alberta</option>
+          <option class="n3">British Columbia</option>
+          <option class="n4">Manitoba</option>
+          <option class="n5">New Brunswick</option>
+          <option class="n6">Newfoundland & Labrador</option>
+          <option class="n7">Nova Scotia</option>
+          <option class="n8">Nunavut</option>
+          <option class="n9">Ontario</option>
+          <option class="n10">Prince Edward Island</option>
+          <option class="n11">Yukon</option>
         </select>
       </div>
     </div>
