--- a/index.html
+++ b/index.html
@@ -262,6 +262,16 @@
                 </a>
               </li>
               <li>
+                <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="pages/product-details.html" target="_blank">
+                  <div class="relative">
+                    <span>Product details</span>
+                    <i class="icon i-18 absolute pin-cr">
+                      <svg><use xlink:href="#icon-pop-out" /></svg>
+                    </i>
+                  </div>
+                </a>
+              </li>
+              <li>
                 <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="pages/shop.html" target="_blank">
                   <div class="relative">
                     <span>Shop</span>
@@ -1515,22 +1525,20 @@
               </button>
               <code><pre id="forms-dropdown-code-sample-copy-chunk">&lt;form&gt;
   &lt;div>
-    &lt;div class="pad-b gutter">
-      &lt;label for="prov" class="kilo ">Province&lt;/label>
+    &lt;div class="pad-b">
+      &lt;label for="prov" class="kilo prov">Province&lt;/label>
       &lt;select id="prov" name="prov">
-        &lt;option>Select a province&lt;/option>
-        &lt;option>Alberta&lt;/option>
-        &lt;option>British Columbia&lt;/option>
-        &lt;option>Manitoba&lt;/option>
-        &lt;option>New Brunswick&lt;/option>
-        &lt;option>Newfoundland &amp; Labrador&lt;/option>
-        &lt;option>Nova Scotia&lt;/option>
-        &lt;option>Nunavut&lt;/option>
-        &lt;option>Ontario&lt;/option>
-        &lt;option>Prince Edward Island&lt;/option>
-        &lt;option>Qu&#xE9;bec&lt;/option>
-        &lt;option>Saskatchewan&lt;/option>
-        &lt;option>Yukon&lt;/option>
+        &lt;option class="n1">Select a province&lt;/option>
+        &lt;option class="n2">Alberta&lt;/option>
+        &lt;option class="n3">British Columbia&lt;/option>
+        &lt;option class="n4">Manitoba&lt;/option>
+        &lt;option class="n5">New Brunswick&lt;/option>
+        &lt;option class="n6">Newfoundland &amp; Labrador&lt;/option>
+        &lt;option class="n7">Nova Scotia&lt;/option>
+        &lt;option class="n8">Nunavut&lt;/option>
+        &lt;option class="n9">Ontario&lt;/option>
+        &lt;option class="n10">Prince Edward Island&lt;/option>
+        &lt;option class="n11">Yukon&lt;/option>
       &lt;/select>
     &lt;/div>
   &lt;/div>
@@ -1952,12 +1960,10 @@
                 </i>
               </button>
               <code><pre id="header-header-code-sample-copy-chunk">&lt;header class="masthead" role="banner"&gt;
-  &lt;div>
+  &lt;div class="pad-t">
     &lt;div>
-      &lt;a class="logo block peta logo-position" href="#">
-          &lt;i class="icon i-192">
-            &lt;img src="../../images/logo-256.svg" alt="">
-          &lt;/i>
+      &lt;a class="block peta logo-position logo center-block pad-t pad-b-1-2" href="#">
+            &lt;img class="img-flex" src="../../images/logo-256.svg" alt="">
         &lt;/a>
     &lt;/div>
     &lt;div class="pad-b-2">
@@ -2129,7 +2135,7 @@ When hovered the text becomes the primary colour.</p>
     &lt;div class="embed embed-1by1">
       &lt;img class="embed-item img-flex island" src="../../images/placeholder.png" alt="">
     &lt;/div>
-    &lt;h1 class="text-center tera">Product Name&lt;/h1>
+    &lt;h1 class="text-center peta push-1-4">Product Name&lt;/h1>
     &lt;h5 class="text-center">Price&lt;/h5>
     &lt;div class="island text-center">
       &lt;a class="btn tera" href="#" aria-label="Buy">Buy&lt;/a>
