--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -131,6 +131,32 @@
       </ul>
     </section>
 
+    <section>
+      <hr class="patternbot-hr">
+
+      <h2 class="patternbot-color-body giga ">Accent colours</h2>
+      <ul class="patternbot-color-swatch-labels patternbot-color-body patternbot-list-group list-group-inline milli push-0">
+          <li class="push">
+            <div class="patternbot-color-swatches patternbot-color-swatches-accent push-1-2" style="background-color:var(--color-grey);">&nbsp;</div>
+            <div class="push-1-2">
+              <i class="patternbot-color-swatches icon i-24" style="background-color:var(--color-grey);">&nbsp;</i>
+              <span class="icon-label">Grey</span>
+            </div>
+            <ul class="patternbot-code-details patternbot-code-details-under patternbot-list-group list-group micro push-0">
+              <li class="push-1-8 relative">
+                <code>var(--color-grey)</code>
+                <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy color: --color-grey" aria-label="Copy color: --color-grey" data-clipboard-text="var(--color-grey)" hidden>
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-copy"></use></svg>
+                  </i>
+                </button>
+              </li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#B0B0B0</code></li>
+              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(176, 176, 176, 1)</code></li>
+            </ul>
+          </li>
+      </ul>
+    </section>
 
 
 </div>
