--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -14,12 +14,10 @@
 <body>
 
   <header class="masthead" role="banner">
-    <div class="">
-      <div class="">
-        <a class="logo block peta logo-position" href="#">
-          <i class="icon i-192">
-            <img src="../../images/logo-256.svg" alt="">
-          </i>
+    <div class="pad-t">
+      <div>
+        <a class="block peta logo-position logo center-block pad-t pad-b-1-2" href="#">
+            <img class="img-flex" src="../../images/logo-256.svg" alt="">
         </a>
       </div>
       <div class="pad-b-2">
