--- a/patterns/product-list/product-list.html
+++ b/patterns/product-list/product-list.html
@@ -19,7 +19,7 @@
       <div class="embed embed-1by1">
         <img class="embed-item img-flex island" src="../../images/placeholder.png" alt="">
       </div>
-      <h1 class="text-center tera">Product Name</h1>
+      <h1 class="text-center peta push-1-4">Product Name</h1>
       <h5 class="text-center">Price</h5>
         <div class="island text-center">
           <a class="btn tera" href="#" aria-label="Buy">Buy</a>
