Linking the pages and buttons

--- a/index.html
+++ b/index.html
@@ -1969,8 +1969,8 @@
     &lt;div class="pad-b-2">
       &lt;nav class="nav" role="navigation">
         &lt;ul class="mega text-center list-group-inline push-0">
-          &lt;li class="gutter-1-2">&lt;a href="#">Home&lt;/a>&lt;/li>
-          &lt;li class="gutter-1-2">&lt;a href="#">Shop&lt;/a>&lt;/li>
+          &lt;li class="gutter-1-2">&lt;a href="../../pages/home.html">Home&lt;/a>&lt;/li>
+          &lt;li class="gutter-1-2">&lt;a href="../../pages/shop.html">Shop&lt;/a>&lt;/li>
           &lt;li class="gutter-1-2">&lt;a href="#">Sale&lt;/a>&lt;/li>
           &lt;li class="gutter-1-2">&lt;a href="#">About&lt;/a>&lt;/li>
         &lt;/ul>
@@ -2138,7 +2138,7 @@ When hovered the text becomes the primary colour.</p>
     &lt;h1 class="text-center peta push-1-4">Product Name&lt;/h1>
     &lt;h5 class="text-center">Price&lt;/h5>
     &lt;div class="island text-center">
-      &lt;a class="btn tera" href="#" aria-label="Buy">Buy&lt;/a>
+      &lt;a class="btn tera" href="../../pages/product-details.html" aria-label="Buy">Buy&lt;/a>
     &lt;/div>
   &lt;/div>
 &lt;/div>
