--- a/pages/product-details.html
+++ b/pages/product-details.html
@@ -42,7 +42,7 @@
         }
       </script>
 
-      <a class="btn" href="#">BUY</a>
+      <a class="btn" href="../../pages/checkout.html">BUY</a>
     </div>
   </main>
 
