--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -151,7 +151,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#B0B0B0</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#b0b0b0</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(176, 176, 176, 1)</code></li>
             </ul>
           </li>
