--- a/patterns/product-list/product-list.html
+++ b/patterns/product-list/product-list.html
@@ -22,7 +22,7 @@
       <h1 class="text-center peta push-1-4">Product Name</h1>
       <h5 class="text-center">Price</h5>
         <div class="island text-center">
-          <a class="btn tera" href="#" aria-label="Buy">Buy</a>
+          <a class="btn tera" href="../../pages/product-details.html" aria-label="Buy">Buy</a>
         </div>
     </div>
   </div>
