--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -23,8 +23,8 @@
       <div class="pad-b-2">
         <nav class="nav" role="navigation">
           <ul class="mega text-center list-group-inline push-0">
-            <li class="gutter-1-2"><a href="#">Home</a></li>
-            <li class="gutter-1-2"><a href="#">Shop</a></li>
+            <li class="gutter-1-2"><a href="../../pages/home.html">Home</a></li>
+            <li class="gutter-1-2"><a href="../../pages/shop.html">Shop</a></li>
             <li class="gutter-1-2"><a href="#">Sale</a></li>
             <li class="gutter-1-2"><a href="#">About</a></li>
           </ul>
