Adding the read me files

--- a/index.html
+++ b/index.html
@@ -849,6 +849,10 @@
       </nav>
   </div>
 
+    <div class="pattern-desc milli island" >
+      <div class="max-length"><p>Banner&#39;s are used for important information that takes an entire row of a page.</p>
+</div>
+    </div>
 
   
 
@@ -879,6 +883,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>This banner will be used on the home page only.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -947,6 +955,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The social banner could be used on any page but preferably on the home page near the footer.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -2098,6 +2110,10 @@ When hovered the text becomes the primary colour.</p>
         </ul>
   </div>
 
+    <div class="pattern-desc milli island" style="">
+      <div class="max-length"><p>This will be used on pages where the products are displayed (shop and sale).</p>
+</div>
+    </div>
 
   
 
